Changes on images list scrollbar Fixes : - images not appeared - list height

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,17 @@
   box-sizing: border-box;
 }
 
+::-webkit-scrollbar {
+  width: 3px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: lightgray;
+  border-radius: 10px;
+  margin: 2px 2px;
+}
+
 .App {
   width: 100vw;
   height: 100vh;
